syntax = "proto3";

option csharp_namespace = "ED.DomainServices.Journals";

package audit;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

service Journal {
  rpc Create (CreateRequest) returns (google.protobuf.Empty);
}

message CreateRequest {
  string token = 1;
  string data = 2;
  int32 login_id = 3;
  int32 profile_id = 4;
  google.protobuf.Timestamp date_created = 5;
}
